--- a/add-membership-plans.html
+++ b/add-membership-plans.html
@@ -244,6 +244,99 @@
                       <div class="button_div"><a class="btn mr-1" href="#"><img src="./images/icon/membership_add_new.svg" alt="icon"> Add New Plan</a></div>
                     </div>
                 </div>
+                <form class="dashboard_form" >
+                  <div class="form-group comments_form">
+                    <div class="row">
+                      <div class="col-lg-4">
+                        <label>Membership Type</label>
+                        <div class="play_type">
+                          <span>Individual</span>
+                          <span>Individual</span>
+                        </div>
+                      </div>
+                      <div class="col-lg-8">
+                        <label>Membership Type</label>
+                        <div class="comments_form">
+                          <select class="form-control form-select" aria-label="Default select example">
+                            <option selected>This Week</option>
+                            <option value="1">This Month</option>
+                            <option value="2">This Year</option>
+                          </select>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-group comments_form">
+                    <div class="row">
+                      <div class="col-lg-6">
+                        <label>Plan Name</label>
+                        <input type="text" class="form-control require" placeholder="Eg.: Silver Plan">
+                      </div>
+                      <div class="col-lg-6">
+                        <div class="row">
+                          <div class="col-6">
+                            <label>Price (In AUD)</label>
+                            <input type="number" class="form-control require" placeholder="Eg.: $49.99">
+                          </div>
+                          <div class="col-6">
+                            <label>Discount (In %)</label>
+                            <input type="number" class="form-control require" placeholder="Eg.: 20%">
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-group comments_form">
+                    <label>Plan Summary</label>
+                    <input type="text" class="form-control require" placeholder="Max 40 words">
+                  </div>
+                  <div class="form-group comments_form">
+                    <label>Benefits</label>
+                    <input type="text" class="form-control require" placeholder="Add benefits 1">
+                    <div class="icon_div">+</div>
+                  </div>
+                  <div class="form-group comments_form">
+                    <label>Terms & Conditions</label>
+                    <textarea class="form-control require" placeholder="Enter Terms nd Conditions"></textarea>
+                  </div>
+                  <div class="form-group comments_form">
+                    <div class="added_div">
+                      <input type="text" class="form-control require" placeholder="Extra Field Data">
+                      <div class="icon_div">+</div>
+                    </div>
+                    <div class="row">
+                      <div class="col-lg-6">
+                        <label>Add Another Field</label>
+                        <div class="comments_form">
+                          <select class="form-control form-select" aria-label="Default select example">
+                            <option selected>Select field type</option>
+                            <option value="1">This Month</option>
+                            <option value="2">This Year</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="col-lg-6">
+                        <div class="form-group comments_form">
+                          <label>Field Label</label>
+                          <input type="text" class="form-control require" placeholder="Eg.: GST in %">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-6">
+                      <div class="form-group comments_form">
+                        <button type="button" class="btn btn-toggle-switch" data-toggle="button" aria-pressed="false" autocomplete="off">
+                          <div class="handle"></div>
+                        </button>
+                        <label class="ml-2">Auto Reneval</label>
+                      </div>
+                    </div>
+                    <div class="col-6 d-flex justify-content-end">
+                      <div class="button_div"><button type="submit" class="btn">Publish Plan</button></div>
+                    </div>
+                  </div>
+                </form>
             </div>
           </div>
         </div>
