--- a/add-membership-plans.html
+++ b/add-membership-plans.html
@@ -15,6 +15,8 @@
 
   <link rel="stylesheet" type="text/css" href="css/fullcalendar.css" />
   <link rel="stylesheet" type="text/css" href="css/icons.css" />
+  <link rel="stylesheet" type="text/css" href="./fonts/icon/icon.css" />
+
   <link rel="stylesheet" type="text/css" href="css/animate.css" />
   <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" /> -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
@@ -175,17 +177,17 @@
             </div>
             <div class="feature_box pt-0">
               <ul class="menu-list" id="drop_menu">
-                <li><a class="link" href="#"><i class="fas fa-tachometer-alt"></i></i> Dashboard</a></li>
-                <li><a class="link" href="#"><i class="fas fa-edit"></i> Profile</a></li>
+                <li><a class="link" href="#"><i class="icon-dashboard"></i> Dashboard</a></li>
+                <li><a class="link" href="#"><i class="icon-profile"></i> Profile</a></li>
                 <li class="dropdown">
-                  <span class="link drop_link"><i class="fas fa-suitcase"></i> Memberships</span>
+                  <span class="link drop_link"><i class="icon-membership"></i></i> Memberships</span>
                   <ul class="submenu dropdown-menu">
                     <li><a class="dropdown-item" href="#">Membership Plans</a></li>
                     <li><a class="dropdown-item" href="#">Members</a></li>
                   </ul>
                 </li>
                 <li class="dropdown">
-                  <span class="link drop_link"><i class="fas fa-tag"></i> Events</span>
+                  <span class="link drop_link"><i class="icon-events"></i> Events</span>
                   <ul class="submenu dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <li><a class="dropdown-item" href="#">Add New Event</a></li>
                     <li><a class="dropdown-item" href="#">All Events</a></li>
@@ -193,14 +195,14 @@
                 </li>
                 <li class="dropdown">
 
-                  <span class="link drop_link"><i class="fas fa-envelope"></i> Club/Shop</span>
+                  <span class="link drop_link"><i class="icon-shop"></i> Club/Shop</span>
                   <ul class="submenu dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <li><a class="dropdown-item" href="#">Add New Club</a></li>
                     <li><a class="dropdown-item" href="#">All Club</a></li>
                   </ul>
                 </li>
                 <li class="dropdown">
-                  <span class="link drop_link"><i class="fas fa-city"></i> Facility</span>
+                  <span class="link drop_link"><i class="icon-facility"></i> Facility</span>
                   <ul class="submenu dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <li><a class="dropdown-item" href="#">All Facility</a></li>
                   </ul>
@@ -214,21 +216,21 @@
                 </ul>
               </li> -->
                 <li class="dropdown">
-                  <span class="link drop_link"><i class="fas fa-globe"></i> Web Pages</span>
+                  <span class="link drop_link"><i class="icon-file"></i> Web Pages</span>
                   <ul class="submenu dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <li><a class="dropdown-item" href="#">Home</a></li>
                     <li><a class="dropdown-item" href="#">About us</a></li>
                     <li><a class="dropdown-item" href="#">Pricing</a></li>
                   </ul>
                 </li>
-                <li><a class="link" href="#"><i class="fas fa-building"></i> Company Preview</a></li>
+                <li><a class="link" href="#"><i class="icon-company"></i> Company Preview</a></li>
               </ul>
             </div>
             <div class="feature_box border-bottom-0">
               <ul class="menu-list">
-                <li><a href="#"><i class="fas fa-key"></i> Change Password</a></li>
-                <li><a href="#"><i class="fas fa-power-off"></i> Log out</a></li>
-                <li><a href="#"><i class="fas fa-trash-alt"></i> Delete Account</a></li>
+                <li><a href="#"><i class="icon-key"></i> Change Password</a></li>
+                <li><a href="#"><i class="icon-power-off"></i> Log out</a></li>
+                <li><a href="#"><i class="icon-delete"></i> Delete Account</a></li>
               </ul>
             </div>
           </div>
